--- a/package.json
+++ b/package.json
@@ -40,9 +40,12 @@
         "v-toaster": "^1.0.3",
         "vue": "^2.6.11",
         "vue-chartjs": "^3.5.0",
+        "vue-js-xlsx": "0.0.2",
+        "vue-json-excel": "^0.2.98",
         "vue-multiselect": "^2.1.6",
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.1.5",
+        "vue-xlsx": "^0.2.1",
         "vue2-datepicker": "^3.5.0",
         "vuesax": "^3.11.13",
         "vuex": "^3.1.2"
