--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=pgsql
 DB_HOST=localhost
 DB_PORT=5432
-DB_DATABASE=stat
+DB_DATABASE=statistic
 DB_USERNAME=postgres
-DB_PASSWORD=12345
+DB_PASSWORD=mirxan
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
