--- a/.env
+++ b/.env
@@ -7,12 +7,12 @@ APP_URL=http://127.0.0.0.1
 LOG_CHANNEL=stack
 
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=localhost
-DB_PORT=3306
-DB_DATABASE=stsdb
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_PORT=5432
+DB_DATABASE=stat
+DB_USERNAME=postgres
+DB_PASSWORD=12345
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
