--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://127.0.0.0.1
 LOG_CHANNEL=stack
 
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=localhost
-DB_PORT=3306
+DB_PORT=5432
 DB_DATABASE=stsdb
-DB_USERNAME=root
+DB_USERNAME=postgres
 DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
