--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=pgsql
 DB_HOST=localhost
 DB_PORT=5432
-DB_DATABASE=statistic
+DB_DATABASE=stat
 DB_USERNAME=postgres
-DB_PASSWORD=mirxan
+DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
