--- a/.env
+++ b/.env
@@ -6,13 +6,12 @@ APP_URL=http://127.0.0.0.1
 
 LOG_CHANNEL=stack
 
-
 DB_CONNECTION=pgsql
 DB_HOST=localhost
 DB_PORT=5432
-DB_DATABASE=stsdb
+DB_DATABASE=statistic
 DB_USERNAME=postgres
-DB_PASSWORD=root
+DB_PASSWORD=mirxan
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
