--- a/.env
+++ b/.env
@@ -2,16 +2,16 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:XUnaced7bXy0VT9qiqHlRJ23ZZ1pok7voquPd02BiyM=
 APP_DEBUG=true
-APP_URL=http://127.0.0.0.1
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_DATABASE=statistic
-DB_USERNAME=postgres
-DB_PASSWORD=mirxan
+DB_CONNECTION=mysql
+DB_HOST=localhost
+DB_PORT=3306
+DB_DATABASE=stsdb
+DB_USERNAME=root
+DB_PASSWORD=
 
 
 BROADCAST_DRIVER=log
