--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "v-toaster": "^1.0.3",
         "vue": "^2.6.11",
         "vue-chartjs": "^3.5.0",
+        "vue-fancybox": "^1.0.3",
         "vue-js-xlsx": "0.0.2",
         "vue-json-excel": "^0.2.98",
         "vue-morris": "^1.1.0",
